tests/expectations/compiler/finalize/block_height_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372034]: `block.height` must be inside an async function block.
    --> compiler-test:5:33
     |
   5 |         assert_eq(height, block.height);
     |                                 ^^^^^^
"""]
